<resources>
    <string name="app_name">Hex Game</string>
    <string name="homeTitle">HEX</string>
    <string name="playVersusBtn">Play PVP</string>
    <string name="playAIBtn">Play with AI</string>
    <string name="mapEditorBtn">Map Editor</string>
    <string name="player_1">Enter your name</string>
    <string name="player_1_name">Player 1 Name</string>
    <string name="player_2">Enter your name</string>
    <string name="player_2_name">Player 2 Name</string>
    <string name="submit_and_play">Submit and play</string>
    <string name="dimensions">Dimensions</string>
    <string name="play_again">Play again</string>
    <string name="home">Home</string>
</resources>